metadata-classic/objects/QualityAnalysis__c.object
<CustomObject>
    <fields>
        <fullName>IdentifyResolveUnderlyingIssue__c</fullName>
        <description>* Actively listen to pick up on cues that there may be an underlying issue
* Understand what the caller needs to know to resolve the issue on their own
* You know what they need, now teach them</description>
        <inlineHelpText>* Actively listen to pick up on cues that there may be an underlying issue
* Understand what the caller needs to know to resolve the issue on their own
* You know what they need, now teach them</inlineHelpText>
        <label>Identify/Resolve Underlying Issue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IdentifyUsersNeedComments__c</fullName>
        <label>Identify User&apos;s Need Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IdentifyVerifyComments__c</fullName>
        <label>Identify/Verify Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IdentifyandVerifyCaller__c</fullName>
        <description>* Verify the caller&apos;s email address (make sure it matches what&apos;s on Thumbtack)
* Associate the Tack case with the contact, or create a new contact if one does not exist
* Create a new case in Tack when appropriate</description>
        <inlineHelpText>* Verify the caller&apos;s email address (make sure it matches what&apos;s on Thumbtack)
* Associate the Tack case with the contact, or create a new contact if one does not exist
* Create a new case in Tack when appropriate</inlineHelpText>
        <label>Identify and Verify Caller</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IdentityUsersNeed__c</fullName>
        <description>Did We Identify The User&apos;s Need? *</description>
        <inlineHelpText>Did We Identify The User&apos;s Need? *</inlineHelpText>
        <label>Identity User&apos;s Need</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ImmediateIssue__c</fullName>
        <label>Immediate Issue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>InformationAccuracyComments__c</fullName>
        <description>Open text area to provide feedback to the specialist for the Information Accuracy competency question.</description>
        <inlineHelpText>Open text area to provide feedback to the specialist for the Information Accuracy competency question.</inlineHelpText>
        <label>Information Accuracy Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InformationAccuracyPoints__c</fullName>
        <description>The number of points earned for the Information Accuracy competency question.</description>
        <inlineHelpText>The number of points earned for the Information Accuracy competency question.</inlineHelpText>
        <label>Information Accuracy Points</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InformationAccuracy__c</fullName>
        <description>We provide the most accurate and current product information to the pro/customer.</description>
        <inlineHelpText>We provide the most accurate and current product information to the pro/customer.</inlineHelpText>
        <label>Information Accuracy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InstantMatchComments__c</fullName>
        <label>Instant Match Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InstantMatch__c</fullName>
        <label>Instant Match</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Emerging</fullName>
                </value>
                <value>
                    <fullName>Advancing</fullName>
                </value>
                <value>
                    <fullName>Obsessing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsMyTeam__c</fullName>
        <formula>IF(ISBLANK(Team__c), False, 
IF(TEXT($User.SpoofAsTeam__c) = Team__c, True, 
IF(AND(ISBLANK(TEXT($User.SpoofAsTeam__c)),TEXT($User.Team__c) = Team__c), True, 
False)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is My Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegalLiabilityComments__c</fullName>
        <label>Legal Liability Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LegalLiability__c</fullName>
        <description>Did we avoid saying/doing things that could cause us legal liability?</description>
        <inlineHelpText>Did we avoid saying/doing things that could cause us legal liability?</inlineHelpText>
        <label>Legal Liability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LinktoPost__c</fullName>
        <label>Link to Post</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ListeningPoints__c</fullName>
        <label>Listening Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Listening__c</fullName>
        <label>Listening</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LoveIts__c</fullName>
        <description>#LoveIts for the interaction</description>
        <inlineHelpText>#LoveIts for the interaction</inlineHelpText>
        <label>#LoveIts</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MIIncident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to MI Incident for Quality Analysis object.</description>
        <label>MI Incident</label>
        <referenceTo>MIIncident__c</referenceTo>
        <relationshipLabel>Quality Analyses</relationshipLabel>
        <relationshipName>Quality_Analyses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MacroTrackingComments__c</fullName>
        <label>Macro Tracking Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MacroTrackingPoints__c</fullName>
        <description>The points earned by the specialist for the Macro Tracking question.</description>
        <inlineHelpText>The points earned by the specialist for the Macro Tracking question.</inlineHelpText>
        <label>Macro Tracking Points</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MacroTrackingWeightedScore__c</fullName>
        <description>The weighted score for the Macro Tracking question.</description>
        <formula>CASE( 
MacroTracking__c , 
&quot;No&quot;, 0.000, 
&quot;Yes&quot;, 0.250 
,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The weighted score for the Macro Tracking question.</inlineHelpText>
        <label>Macro Tracking Weighted Score</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MacroTracking__c</fullName>
        <description>We apply the correct macro to the case.</description>
        <inlineHelpText>We apply the correct macro to the case.</inlineHelpText>
        <label>Macro Tracking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MentionsPoints__c</fullName>
        <label>Mentions Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mentions__c</fullName>
        <label>Mentions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NextStepsProvided__c</fullName>
        <description>Used for CE business level evaluations.  Did we give next steps?</description>
        <inlineHelpText>Did we give next steps?</inlineHelpText>
        <label>Next Steps Provided</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No__c</fullName>
        <formula>( 
IF(TEXT(ShowObsessionforProCustomer__c)= &quot;No&quot;, 1, 0) + 
IF(TEXT(Greeting__c)= &quot;No&quot;, 1, 0) + 
IF(TEXT(IdentifyandVerifyCaller__c)= &quot;No&quot;, 1, 0) + 
IF(TEXT(IdentifyImmediateIssue__c)= &quot;No&quot;, 1, 0) + 
IF(TEXT(ResolveImmediateIssue__c)= &quot;No&quot;, 1, 0) + 
IF(TEXT(IdentifyResolveUnderlyingIssue__c)= &quot;No&quot;, 1, 0) + 
IF(TEXT(EscalateTroubleshootIssues__c)= &quot;No&quot;, 1, 0) + 
IF(TEXT(ClosetheCall__c)= &quot;No&quot;, 1, 0) + 
IF(TEXT(DocumentationFollowup__c)= &quot;No&quot;, 1, 0) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NoteTakingPoints__c</fullName>
        <label>Note Taking Points</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NoteTaking__c</fullName>
        <label>Note Taking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NumberOfIssues__c</fullName>
        <description>Used on CE business level evaluations.  How many issues did the pro/customer bring up on the contact?</description>
        <inlineHelpText>How many issues did the pro/customer bring up on the contact?</inlineHelpText>
        <label>Number of Issues</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>More than 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberofContactstoResolve__c</fullName>
        <description>Used for CE business level evaluations.  How many contacts did it take to resolve the issue?</description>
        <inlineHelpText>How many contacts did it take to resolve the issue?</inlineHelpText>
        <label>Number of Contacts to Resolve</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>More than 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ObsessionComments__c</fullName>
        <label>Obsession Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OfferWorkaroundsComments__c</fullName>
        <description>Comments for Offer Workarounds field.</description>
        <label>Offer Workarounds Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OfferWorkarounds__c</fullName>
        <description>-We understand what is working or not working with the professionals experience and offer appropriate work arounds 
-We tailor our education to their specific experience and explain the value
-When applicable we offer to walk the professional to implement the workarounds offered</description>
        <label>Offer Workarounds</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Emerging</fullName>
                </value>
                <value>
                    <fullName>Advancing</fullName>
                </value>
                <value>
                    <fullName>Obsessing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OwnerisQueue__c</fullName>
        <description>Formula to indicate true if the owner of the QA record is a queue.</description>
        <formula>BEGINS(OwnerId,&quot;00G&quot;)</formula>
        <label>Owner is Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PartnerwithProCustomer__c</fullName>
        <description>We partner with the pro/customer. We aren&apos;t rude or in opposition of them *</description>
        <inlineHelpText>We partner with the pro/customer. We aren&apos;t rude or in opposition of them *</inlineHelpText>
        <label>Partner with Pro/Customer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PerformedByCurrentUser__c</fullName>
        <formula>IF( Performedby__r.Id = $User.Id , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PerformedByCurrentUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PerformedByManager__c</fullName>
        <formula>IF( CONTAINS(Performedby__r.UserRole.Name,&apos;Managing User&apos;), true,false)</formula>
        <label>PerformedByManager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PerformedBySelf__c</fullName>
        <formula>IF(  Performedby__r.Id = Agent__r.Id , true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PerformedBySelf</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performedby__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Agent, Manager, TL, or Quality Analyst that performed the QA.</description>
        <inlineHelpText>The Agent, Manager, TL, or Quality Analyst that performed the QA.</inlineHelpText>
        <label>Performed by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QAs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PersonalInformationManagementComments__c</fullName>
        <description>Comments about the Personal Information Management question.</description>
        <inlineHelpText>Comments about the Personal Information Management question.</inlineHelpText>
        <label>Personal Information Management Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PersonalInformationManagementPoints__c</fullName>
        <description>The points earned by the specialist for the Personal Information Management question.</description>
        <inlineHelpText>The points earned by the specialist for the Personal Information Management question.</inlineHelpText>
        <label>Personal Information Management Points</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PersonalInformationManagement__c</fullName>
        <description>- We refrain from taking credit card numbers over phone or email
- We do not disclose a pro/customer&apos;s phone number or full name unless it has already been provided voluntarily by the customer or professional
- We do not disclose a pro/customer&apos;s physical address
- We do not take a customer/pro&apos;s password over the phone or in email</description>
        <inlineHelpText>-We refrain from taking credit card numbers over phone or email
-We do not disclose a pro/customer&apos;s phone number or full name unless it has already been provided voluntarily by the customer or professional
-We do not disclose a pro/customer&apos;s physical</inlineHelpText>
        <label>Personal Information Management</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PersonalInformationWeightedScore__c</fullName>
        <description>Calculated weighted score for personal information management question.</description>
        <formula>CASE( 
PersonalInformationManagement__c  , 
&quot;No&quot;, -2.00, 
&quot;Yes&quot;, 0.00
,NULL)</formula>
        <label>Personal Information Weighted Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PolicyAdherencePoints__c</fullName>
        <description>The points earned by the specialist for the Policy Adherence question.</description>
        <inlineHelpText>The points earned by the specialist for the Policy Adherence question.</inlineHelpText>
        <label>Policy Adherence Points</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PolicyorProductPrevention__c</fullName>
        <description>Used for CE business level evaluations.  Did policy or product prevent us from resolving the issue?</description>
        <inlineHelpText>Did policy or product prevent us from resolving the issue?</inlineHelpText>
        <label>Policy or Product Prevention</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PositiveLanguageComments__c</fullName>
        <description>Comments about Positive Language question.</description>
        <inlineHelpText>Comments about Positive Language question.</inlineHelpText>
        <label>Positive Language Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PositiveLanguagePoints__c</fullName>
        <description>The number of points earned by the specialist for the Positive Language question.</description>
        <inlineHelpText>The number of points earned by the specialist for the Positive Language question.</inlineHelpText>
        <label>Positive Language Points</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PositiveLanguageWeightedScore__c</fullName>
        <description>Calculated weighted score for positive language question.</description>
        <formula>CASE( 
PositiveLanguage__c  , 
&quot;1&quot;, 0.000, 
&quot;2&quot;, 0.571,
&quot;3&quot;, 0.666,
&quot;4&quot;, 0.571,
&quot;5&quot;, 0.952
,NULL)</formula>
        <label>Positive Language Weighted Score</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PositiveLanguage__c</fullName>
        <description>We communicate information in a way that diffuses negative customer reactions.</description>
        <inlineHelpText>We communicate information in a way that diffuses negative customer reactions.</inlineHelpText>
        <label>Positive Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>Emerging</fullName>
                </value>
                <value>
                    <fullName>Advancing</fullName>
                </value>
                <value>
                    <fullName>Obsessing</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post__c</fullName>
        <label>Post</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProbingPoints__c</fullName>
        <label>Probing Points</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Probing__c</fullName>
        <label>Probing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProcessAdherenceComments__c</fullName>
        <description>Comments about the Policy Adherence question.</description>
        <inlineHelpText>Comments about the Policy Adherence question.</inlineHelpText>
        <label>Policy Adherence Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProcessAdherenceWeightedScore__c</fullName>
        <description>Calculated weighted score for policy adherence question.</description>
        <formula>CASE( 
ProcessAdherence__c  , 
&quot;No&quot;, 0.000, 
&quot;Yes&quot;, 0.66667
,NULL)</formula>
        <label>Policy Adherence Weighted Score</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProcessAdherence__c</fullName>
        <description>We follow internal policies as outlined in Knowledge articles (e.g., credit &amp; refund policy, etc.).</description>
        <inlineHelpText>We follow internal policies as outlined in Knowledge articles (e.g., credit &amp; refund policy, etc.).</inlineHelpText>
        <label>Policy Adherence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProperDetailsGiven__c</fullName>
        <description>We give enough detail. We don&apos;t sound blunt or cold *</description>
        <inlineHelpText>We give enough detail. We don&apos;t sound blunt or cold *</inlineHelpText>
        <label>Proper Details Given</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProperExpectationsComments__c</fullName>
        <description>Comments for Proper Expectations field</description>
        <label>Proper Expectations Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProperExpectations__c</fullName>
        <description>-We set the right expectations regarding the feature, the preferences and do not over promise
-We set expectations for all workarounds provided 
-We explain what the professional can expect after the call</description>
        <label>Proper Expectations</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Emerging</fullName>
                </value>
                <value>
                    <fullName>Advancing</fullName>
                </value>
                <value>
                    <fullName>Obsessing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProvidedSolutionComments__c</fullName>
        <description>Comments about the Provided Solution competency.</description>
        <inlineHelpText>Comments about the Provided Solution competency.</inlineHelpText>
        <label>Provided Solution Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProvidedSolutionPoints__c</fullName>
        <description>The points earned by the specialist for the Provided Solution competency.</description>
        <inlineHelpText>The points earned by the specialist for the Provided Solution competency.</inlineHelpText>
        <label>Provided Solution Points</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProvidedSolution__c</fullName>
        <description>- We take action when we can, to reduce pro/customer effort, and guide them to resolve the stated concern on their own in the future
- If we are unable to take action, we guide them to resolve the stated concern on their own
- The solution we offer is the correct solution to resolve the stated concern</description>
        <inlineHelpText>- We take action when we can, to reduce pro/customer effort, and guide them to resolve the stated concern on their own in the future
- If we are unable to take action, we guide them to resolve the stated concern on their own
- The solution we offer...</inlineHelpText>
        <label>Provided Solution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PurposeofCallComments__c</fullName>
        <description>Comments for purpose of call field.</description>
        <label>Purpose of Call Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PurposeofCall__c</fullName>
        <description>-We explain the purpose of the call based off the call type and department expectations.
-We use the right phrasing and questions to open the call</description>
        <label>Purpose of Call</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Emerging</fullName>
                </value>
                <value>
                    <fullName>Advancing</fullName>
                </value>
                <value>
                    <fullName>Obsessing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QAAudit__c</fullName>
        <description>Marked yes if this QA was audited by the QA Team.</description>
        <label>QA Audit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QAScore__c</fullName>
        <description>Formula field counting the number of &quot;Yes&quot; answers in the 9 QA questions. The percentage is calculated by the number of &quot;Yes&quot; answers divided by 9. This gives the QA score as a percentage.</description>
        <formula>(
IF(TEXT(ShowObsessionforProCustomer__c)= &quot;Yes&quot;, 2, 0) +
IF(TEXT(Greeting__c)= &quot;Yes&quot;, 1, 0) +
IF(TEXT(IdentifyandVerifyCaller__c)= &quot;Yes&quot;, 1, 0) +
IF(TEXT(IdentifyImmediateIssue__c)= &quot;Yes&quot;, 1, 0) +
IF(TEXT(ResolveImmediateIssue__c)= &quot;Yes&quot;, 1, 0) +
IF(TEXT(IdentifyResolveUnderlyingIssue__c)= &quot;Yes&quot;, 1, 0) +
IF(TEXT(EscalateTroubleshootIssues__c)= &quot;Yes&quot;, 1, 0) +
IF(TEXT(ClosetheCall__c)= &quot;Yes&quot;, 1, 0) +
IF(TEXT(DocumentationFollowup__c)= &quot;Yes&quot;, 1, 0)
)
 / 10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The overall QA score.</inlineHelpText>
        <label>QA Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>QuickPayComments__c</fullName>
        <description>Comments for Quick Pay field.</description>
        <label>Quick Pay Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QuickPay__c</fullName>
        <description>-We read the agreement word for word and receive a clear answer. (I agree, Yes or No)</description>
        <label>Quick Pay</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>